[metadata]
name = example-package-YOUR-USERNAME-HERE
version = 0.0.1
author = Matthew Cowley
author_email = cowley7j@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mcow7j/Python_Package_test
project_urls =
    Bug Tracker = https://github.com/mcow7j/Python_Package_test/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src